@startuml
'https://plantuml.com/class-diagram

abstract class AbstractAircraft
interface Strategy
class DirectBullet
class ScatterBullet


AbstractAircraft o-- Strategy
Strategy <|.. DirectBullet
Strategy <|..ScatterBullet


class DirectBullet{
    + doOperation(AbstractAircraft abstractAircraft):List<BaseBullet>
    }
class ScatterBullet{
    + doOperation(AbstractAircraft abstractAircraft):List<BaseBullet>
    }
abstract class AbstractAircraft{
- strategy:Strategy
+ setStrategy(Strategy strategy):void
+ excuteStrategy(AbstractAircraft abstractAircraft):List<BaseBullet>
}

interface Strategy{
    + doOperation(AbstractAircraft abstractAircraft): List<BaseBullet>
}




@enduml